--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,13 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+      - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,EXTERNAL://0.0.0.0:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL://localhost:9094
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CREATE_TOPICS: "movie-events:1:1,user-events:1:1,payment-events:1:1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     volumes:
@@ -94,8 +97,13 @@ services:
     ports:
       - "8082:8082"
     environment:
-      PORT: 8082
-      KAFKA_BROKERS: kafka:9092
+      ASPNETCORE_URLS: http://0.0.0.0:8082
+      Kafka__Host: kafka:9092
+      Kafka__ClientId: events-service
+      Kafka__GroupId: events-service
+      Kafka__Topics__Movie: movie-events
+      Kafka__Topics__User: user-events
+      Kafka__Topics__Payment: payment-events
     networks:
       - cinemaabyss-network
 
@@ -112,12 +120,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      PORT: 8000
-      MONOLITH_URL: http://monolith:8080
-      MOVIES_SERVICE_URL: http://movies-service:8081
-      EVENTS_SERVICE_URL: http://events-service:8082
-      GRADUAL_MIGRATION: "true"
-      MOVIES_MIGRATION_PERCENT: "50"
+      ASPNETCORE_URLS: http://0.0.0.0:8000
+      Proxy__Routes__0__PathPrefix: /api/movies
+      Proxy__Routes__0__MigrationPercent: 50
+      Proxy__Routes__0__MigrationUrl: http://movies-service:8081/api/movies
+      Proxy__Routes__0__OldUrl: http://monolith:8080/api/movies
+
+      Proxy__Routes__1__PathPrefix: /api/users
+      Proxy__Routes__1__MigrationPercent: 0
+      Proxy__Routes__1__MigrationUrl: ""
+      Proxy__Routes__1__OldUrl: http://monolith:8080/api/users
     networks:
       - cinemaabyss-network
 
