--- a/src/microservices/events/appsettings.json
+++ b/src/microservices/events/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Kafka": {
-    "BootstrapServers": "localhost:9094",
+    "Host": "localhost:9094",
     "ClientId": "events-service",
     "GroupId": "events-service",
     "Topics":
