--- a/src/kubernetes/configmap.yaml
+++ b/src/kubernetes/configmap.yaml
@@ -17,3 +17,12 @@ data:
   # Strangler Fig configuration
   GRADUAL_MIGRATION: "true"
   MOVIES_MIGRATION_PERCENT: "100"
+  
+  # Kafka
+  Kafka__Host: "kafka:9092"
+  Kafka__ClientId: "events-service"
+  Kafka__GroupId: "events-service"
+
+  Kafka__Topics__Movie: "movie-events"
+  Kafka__Topics__User: "user-events"
+  Kafka__Topics__Payment: "payment-events"
