--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,10 +126,11 @@ services:
       Proxy__Routes__0__MigrationUrl: http://movies-service:8081/api/movies
       Proxy__Routes__0__OldUrl: http://monolith:8080/api/movies
 
-      Proxy__Routes__1__PathPrefix: /api/users
+      Proxy__Routes__1__PathPrefix: /
       Proxy__Routes__1__MigrationPercent: 0
       Proxy__Routes__1__MigrationUrl: ""
-      Proxy__Routes__1__OldUrl: http://monolith:8080/api/users
+      Proxy__Routes__1__OldUrl: http://monolith:8080
+     
     networks:
       - cinemaabyss-network
 
