--- a/src/microservices/proxy/appsettings.json
+++ b/src/microservices/proxy/appsettings.json
@@ -14,10 +14,10 @@
         "OldUrl": "http://localhost:8080/api/movies"
       },
       {
-        "PathPrefix": "/api/users",
+        "PathPrefix": "/",
         "MigrationPercent": 0,
         "MigrationUrl": "",
-        "OldUrl": "http://localhost:8080/api/users"
+        "OldUrl": "http://localhost:8080"
       }
     ]
   },
